<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff536268"
    android:id="@+id/ScreenThree">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout3"
        android:background="@color/gradient_radiel_backgraund">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:layout_marginTop="150dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/search"
                android:id="@+id/textView10"
                android:textSize="36dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/progress_1">
        </ProgressBar>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RadioGroup_by"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_id"
                    android:id="@+id/radioButton_id"
                    android:textSize="28dp"
                    android:layout_marginTop="30dp"
                    android:checked="false"
                    android:textColor="@android:color/background_light"
                    android:background="@color/background"
                    android:paddingLeft="50dp"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_tel"
                    android:id="@+id/radioButton_tel"
                    android:textSize="28dp"
                    android:layout_marginTop="30dp"
                    android:checked="false"
                    android:textColor="@android:color/background_light"
                    android:background="@color/background"
                    android:paddingLeft="50dp"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_email"
                    android:id="@+id/radioButton_email"
                    android:textSize="28dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/background_light"
                    android:background="@color/background"
                    android:paddingLeft="50dp"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/by_fio"
                    android:id="@+id/radioButton_fio"
                    android:textSize="28dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/background_light"
                    android:checked="false"
                    android:background="@color/background"
                    android:paddingLeft="50dp"/>

            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:paddingLeft="70dp"
            android:paddingTop="70dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="Назад"
                android:id="@+id/button5"
                android:onClick="click_back"
                android:textColor="#FFFfFFFf"
                android:background="@color/button0102"
                android:drawableLeft="@drawable/abc_ic_ab_back_mtrl_am_alpha"
                android:padding="15dp" />

        </LinearLayout>

    </TableLayout>


</android.support.v4.widget.DrawerLayout>